# TrueOrigin

./: Cargo.toml  Makefile  README.md  dfx.json  ledger-canister.wasm  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: Cargo.toml  README.md  backend.did
backend/src/: lib.rs
frontend/: package.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: global_state.rs  icp.rs  lib.rs  models.rs  utils.rs
src/backend/src/declarations/: ic_siwe_provider.rs
src/backend/src/user_page/: evm_rpc.rs  get_my_profile.rs  icp_trf.rs  list_profiles.rs  mod.rs  save_my_profile.rs
src/declarations/TrustOrigin_backend/: TrustOrigin_backend.did  TrustOrigin_backend.did.d.ts  TrustOrigin_backend.did.js
src/declarations/TrustOrigin_frontend/: index.d.ts  index.js
src/declarations/TrustOrigin_user_frontend/: index.d.ts  index.js
src/frontend/: package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx
src/frontend/src/contexts/useAuthContext/: index.tsx
src/frontend/src/pages/: dashboard.tsx  home.tsx  mobile-coin-granted.tsx  mobile-failed.tsx  mobile-scan.tsx  mobile-success.tsx
src/frontend/src/pages/auth/: login.tsx
src/user_frontend/: package-lock.json  package.json  vite.config.ts
src/user_frontend/src/: App.tsx
src/user_frontend/src/components/header/: Header.tsx  SessionDialog.tsx
src/user_frontend/src/ic/: Actors.tsx
src/user_frontend/src/pages/: dashboard.tsx  home.tsx  mobile-coin-granted.tsx  mobile-failed.tsx  mobile-scan.tsx  mobile-success.tsx
src/user_frontend/src/wagmi/: wagmi.config.ts
(+4 files in other folders)
